--- a/index.html
+++ b/index.html
@@ -4,57 +4,119 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0"> <!-- displays site properly based on user's device -->
 
-  <link rel="icon" type="image/png" sizes="32x32" href="./assets/images/favicon-32x32.png">
+  <link rel="icon" type="image/png" sizes="32x32" href="./images/favicon-32x32.png">
+  <link rel="stylesheet" href= "styles.css">
+
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;700;800&display=swap" rel="stylesheet">
   
   <title>Frontend Mentor | News homepage</title>
 
+  <script src="script.js" defer></script>
+
   <!-- Feel free to remove these styles or customise in your own stylesheet 👍 -->
-  <style>
-    .attribution { font-size: 11px; text-align: center; }
-    .attribution a { color: hsl(228, 45%, 44%); }
-  </style>
 </head>
 <body>
-
-  Home
-  New
-  Popular
-  Trending
-  Categories
-
-  The Bright Future of Web 3.0?
-
-  We dive into the next evolution of the web that claims to put the power of the platforms back into the hands of the people. 
-  But is it really fulfilling its promise?
-
-  Read more
-
-  New 
-
-  Hydrogen VS Electric Cars
-  Will hydrogen-fueled cars ever catch up to EVs?
-
-  The Downsides of AI Artistry
-  What are the possible adverse effects of on-demand AI image generation?
-
-  Is VC Funding Drying Up?
-  Private funding by VC firms is down 50% YOY. We take a look at what that means.
-
-  01
-  Reviving Retro PCs
-  What happens when old PCs are given modern upgrades?
-
-  02
-  Top 10 Laptops of 2022
-  Our best picks for various needs and budgets.
-
-  03
-  The Growth of Gaming
-  How the pandemic has sparked fresh opportunities.
-  
-  <div class="attribution">
-    Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
-    Coded by <a href="#">Your Name Here</a>.
-  </div>
+  <div class="outsideDiv">
+    <nav class="navbar">
+      <div class="navbarSection">
+        <a class="navbarImage" href="#">
+          <img src="assets/images/logo.svg">
+        </a>
+        <div class="navbarLinks">
+          <li class="nav-item">Home</li>
+          <li class="nav-item">New</li>
+          <li class="nav-item">Popular</li>
+          <li class="nav-item">Trending</li>
+          <li class="nav-item">Categories</li>
+        </div>
+        <div class="navbarHolder" onclick="mobileNavOpen()">
+          <img src="assets/images/icon-menu.svg">
+        </div>
+        <div class="navbarMobileNav" id="mobileNav">
+          <div class="navBarMobileClose" onclick="mobileNavClose()">
+            <img src="assets/images/icon-menu-close.svg">
+          </div>
+          <div class="navbarMobileHolder">
+            <div class="navbarLinksMobile">
+              <li class="nav-item">Home</li>
+              <li class="nav-item">New</li>
+              <li class="nav-item">Popular</li>
+              <li class="nav-item">Trending</li>
+              <li class="nav-item">Categories</li>
+            </div>
+          </div>
+        </div>
+      </div>
+    </nav>
+    <div class="mainContent">
+      <div class="mainContentColOne">
+        <div class="colOneImage">
+          <img id="mainImage" src="assets/images/image-web-3-desktop.jpg">
+        </div>
+        <div class="colOneContainer">
+          <div class="leftColOne">
+            <h2 class="futureText">The Bright Future of Web 3.0?</h2>
+          </div>
+          <div class="rightColOne">
+            <p class="description">We dive into the next evolution of the web that claims to put the power of the platforms back into the hands of the people. But is it really fulfilling its promise?</p>
+            <button class="readMore">READ MORE</button>
+          </div>
+        </div>
+      </div>
+      <div class="mainContentColTwo">
+        <div class="rightSection">
+            <div class="insideRightSection">
+              <h3>New</h3>
+              <div class="rightSectionContent">
+                <h5>Hydrogen VS Electric Cars</h5>
+                <p>Will hydrogren-fueled cars ever catch up to EVs?</p>
+              </div>
+              <div class="rightSectionContent">
+                <h5>The Downsides of AI Artistry</h5>
+                <p>What are the possible adverse effects of on-demand AI image generation?</p>
+              </div>
+              <div class="rightSectionContent">
+                <h5>Is VC Funding Drying Up?</h5>
+                <p>Private funding by VC firms is down 50% YOY. We take a look at what that means.</p>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+      <div class="bottomSection">
+        <div class="bottomBox">
+          <div class="boxImage">
+            <img src="assets/images/image-retro-pcs.jpg" width="100" height="127">
+          </div>
+          <div class="bottomBoxText">
+            <h3>01</h3>
+            <h5>Reviving Retro PCs</h5>
+            <p>What happens when old PCs are given modern upgrades?</p>
+          </div>
+        </div>
+        <div class="bottomBox">
+          <div class="boxImage">
+            <img src="assets/images/image-top-laptops.jpg" width="100" height="127">
+          </div>
+          <div class="bottomBoxText">
+            <h3>02</h3>
+            <h5>Top 10 Laptops of 2022</h5>
+            <p>Our best picks for various needs and budgets.</p>
+          </div>
+        </div>
+        <div class="bottomBox">
+          <div class="boxImage">
+            <img src="assets/images/image-gaming-growth.jpg" width="100" height="127">
+          </div>
+          <div class="bottomBoxText">
+            <h3>03</h3>
+            <h5>The Growth of Gaming</h5>
+            <p>How the pandemic has sparked fresh opportunities.</p>
+          </div>
+        </div>
+      </div>
+    </div>
 </body>
 </html>
